--- a/expectconnection/libp2p/connmanager.html
+++ b/expectconnection/libp2p/connmanager.html
@@ -371,6 +371,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="selectMuxer(c: ConnManager; conn: Connection): Muxer">selectMuxer(c: ConnManager; conn: Connection): Muxer</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">storeConn
+      <li><a class="reference" href="#storeConn%2CConnManager%2CConnection"
+    title="storeConn(c: ConnManager; conn: Connection)">storeConn(c: ConnManager; conn: Connection)</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">storeMuxer
       <li><a class="reference" href="#storeMuxer%2CConnManager%2CMuxer%2CFuture%5Bvoid%5D"
     title="storeMuxer(c: ConnManager; muxer: Muxer; handle: Future[void] = nil)">storeMuxer(c: ConnManager; muxer: Muxer; handle: Future[void] = nil)</a></li>
@@ -875,6 +880,19 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="storeConn,ConnManager,Connection" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#storeConn%2CConnManager%2CConnection"><span class="Identifier">storeConn</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="connmanager.html#ConnManager"><span class="Identifier">ConnManager</span></a><span class="Other">;</span> <span class="Identifier">conn</span><span class="Other">:</span> <a href="stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">,</span> <a href="errors.html#LPError"><span class="Identifier">LPError</span></a><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+store a connection 
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/expectconnection/libp2p/connmanager.nim#L401"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L401" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="storeMuxer,ConnManager,Muxer,Future[void]" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#storeMuxer%2CConnManager%2CMuxer%2CFuture%5Bvoid%5D"><span class="Identifier">storeMuxer</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="connmanager.html#ConnManager"><span class="Identifier">ConnManager</span></a><span class="Other">;</span> <span class="Identifier">muxer</span><span class="Other">:</span> <a href="muxers/muxer.html#Muxer"><span class="Identifier">Muxer</span></a><span class="Other">;</span> <span class="Identifier">handle</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> <span class="Other">=</span> <span class="Keyword">nil</span><span class="Other">)</span> {.
     <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">,</span> <span class="Identifier">CatchableError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
@@ -939,7 +957,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-20 17:26:58 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-23 10:18:28 UTC</small>
       </div>
     </div>
   </div>
