--- a/fixautonatservice/libp2p/connmanager.html
+++ b/fixautonatservice/libp2p/connmanager.html
@@ -280,11 +280,6 @@ window.addEventListener("DOMContentLoaded", main2);
                     kind: PeerEventKind)</a></li>
 
   </ul>
-  <ul class="simple nested-toc-section">availableIncomingSlots
-      <li><a class="reference" href="#availableIncomingSlots%2CConnManager"
-    title="availableIncomingSlots(c: ConnManager): int">availableIncomingSlots(c: ConnManager): int</a></li>
-
-  </ul>
   <ul class="simple nested-toc-section">close
       <li><a class="reference" href="#close%2CConnManager"
     title="close(c: ConnManager): Future[void]">close(c: ConnManager): Future[void]</a></li>
@@ -336,6 +331,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="getStream(c: ConnManager; peerId: PeerId): Future[Connection]">getStream(c: ConnManager; peerId: PeerId): Future[Connection]</a></li>
   <li><a class="reference" href="#getStream%2CConnManager%2CPeerId%2CDirection"
     title="getStream(c: ConnManager; peerId: PeerId; dir: Direction): Future[Connection]">getStream(c: ConnManager; peerId: PeerId; dir: Direction): Future[Connection]</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">incomingSlotsAvailable
+      <li><a class="reference" href="#incomingSlotsAvailable%2CConnManager"
+    title="incomingSlotsAvailable(c: ConnManager): int">incomingSlotsAvailable(c: ConnManager): int</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">new
@@ -626,18 +626,6 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="availableIncomingSlots,ConnManager" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#availableIncomingSlots%2CConnManager"><span class="Identifier">availableIncomingSlots</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="connmanager.html#ConnManager"><span class="Identifier">ConnManager</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L447"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L447" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
 <div id="close,ConnManager" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#close%2CConnManager"><span class="Identifier">close</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="connmanager.html#ConnManager"><span class="Identifier">ConnManager</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span>
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
@@ -801,6 +789,18 @@ get a muxed stream for the provided peer with the given direction
 href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L498"
 class="link-seesrc" target="_blank">Source</a>
 &nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L498" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="incomingSlotsAvailable,ConnManager" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#incomingSlotsAvailable%2CConnManager"><span class="Identifier">incomingSlotsAvailable</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="connmanager.html#ConnManager"><span class="Identifier">ConnManager</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/fixautonatservice/libp2p/connmanager.nim#L447"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/connmanager.nim#L447" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -974,7 +974,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-24 08:33:50 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-24 11:02:59 UTC</small>
       </div>
     </div>
   </div>
